[gd_scene load_steps=3 format=3 uid="uid://b85bs3r1p7rbf"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_22pe8"]
[ext_resource type="FontFile" uid="uid://cru7vmbpoyic2" path="res://Assets/fonts/Fortzilla-Regular.ttf" id="2_ru5fi"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22pe8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
theme_override_fonts/font = ExtResource("2_ru5fi")
theme_override_font_sizes/font_size = 40
text = "RESUME"

[node name="ReturnButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ru5fi")
theme_override_font_sizes/font_size = 40
text = "   RETURN TO MAIN MENU   "

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
theme_override_fonts/font = ExtResource("2_ru5fi")
theme_override_font_sizes/font_size = 40
text = "EXIT GAME"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
